[gd_scene load_steps=34 format=2]

[ext_resource path="res://Scripts/Bridge.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Bridge/PonteFimNomral.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Bridge/MiddlePonteNormal.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Bridge/PonteInicioNomral.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/Bridge/PonteInicioQuebr.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/Bridge/PonteFimQuebr.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/Bridge/PonteFimNomral2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/Bridge/MiddlePonteNormal2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/Bridge/PonteInicioNomral2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/explosion.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 33, 31 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 33, 31 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 33, 31 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 18 ) ],
"loop": true,
"name": "Normal",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "Quebrado",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 34, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 68, 0, 34, 34 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Explosion",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "None",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 103.3, 12 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 31 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 31 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Explosion",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "None",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 100.5, 12 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 31 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 31 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 100.3, 12 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 33, 31 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 33, 31 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 33, 31 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 13 ) ],
"loop": true,
"name": "Normal",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ) ],
"loop": true,
"name": "Quebrado",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 103, 12 )

[node name="Ponte" type="Node2D"]
script = ExtResource( 1 )

[node name="Ponte0" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Ponte0"]
position = Vector2( -228.438, 4.68733 )
scale = Vector2( 6.25, 6.1875 )
frames = SubResource( 8 )
animation = "Normal"

[node name="Explosion" type="AnimatedSprite" parent="Ponte0"]
position = Vector2( -233, -3.06265 )
scale = Vector2( 8.58824, 7.76102 )
frames = SubResource( 29 )
animation = "Explosion"

[node name="Area2D" type="Area2D" parent="Ponte0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ponte0/Area2D"]
position = Vector2( -227, -52 )
shape = SubResource( 31 )

[node name="Position2D" type="Position2D" parent="Ponte0"]
position = Vector2( -332, -35 )

[node name="Ponte1" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Ponte1"]
position = Vector2( -24.25, 4.00003 )
scale = Vector2( 6.28125, 6.19355 )
frames = SubResource( 10 )

[node name="Explosion" type="AnimatedSprite" parent="Ponte1"]
position = Vector2( -26.3125, 6.125 )
scale = Vector2( 8.58824, 7.76102 )
frames = SubResource( 30 )
animation = "None"

[node name="Area2D" type="Area2D" parent="Ponte1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ponte1/Area2D"]
position = Vector2( -23.2, -52 )
shape = SubResource( 32 )

[node name="Ponte2" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Ponte2"]
position = Vector2( 177, 3.90625 )
scale = Vector2( 6.28125, 6.1875 )
frames = SubResource( 4 )

[node name="Explosion" type="AnimatedSprite" parent="Ponte2"]
position = Vector2( 174.688, 2.90623 )
scale = Vector2( 8.58824, 7.76102 )
frames = SubResource( 30 )
animation = "Explosion"

[node name="Area2D" type="Area2D" parent="Ponte2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ponte2/Area2D"]
position = Vector2( 178, -52 )
shape = SubResource( 33 )

[node name="Ponte3" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Ponte3"]
position = Vector2( 382.015, 4.46876 )
scale = Vector2( 6.28125, 6.1875 )
frames = SubResource( 14 )
animation = "Normal"
offset = Vector2( -0.218853, -0.0909096 )

[node name="Explosion" type="AnimatedSprite" parent="Ponte3"]
position = Vector2( 378.891, 6.03126 )
scale = Vector2( 8.58824, 7.76102 )
frames = SubResource( 30 )
animation = "Explosion"

[node name="Area2D" type="Area2D" parent="Ponte3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ponte3/Area2D"]
position = Vector2( 382.175, -52 )
shape = SubResource( 34 )
